--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="ebac logo">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+                O maior evento de tecnologia do Brasil começa em <samp id="contador"></samp>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -31,7 +31,7 @@
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2022 ás 19hrs
+                        12/12/2023 ás 19hrs
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">
