quebra de linha contagem2

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="ebac logo">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em <br> <samp id="contador"></samp>
+                O maior evento de tecnologia do Brasil começa em 
+                <br> 
+                <br> 
+                <samp id="contador"></samp>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
